Remove unused companion app startup flag